Update test code in spec/dummy to new API

--- a/spec/dummy/app/views/pages/render_js.html.erb
+++ b/spec/dummy/app/views/pages/render_js.html.erb
@@ -10,7 +10,7 @@
 
 <hr/>
 <pre>
-<%= server_render_js("(function() { var x = this.HelloString.world(); console.warn('ran console.warn on the server()'); return x;})()") %>
+<%= server_render_js("(function() { var x = ReactOnRails.componentForName('HelloString').world(); console.warn('ran console.warn on the server()'); return x;})()") %>
 </pre>
 
 <hr/>
