--- a/lib/generators/react_on_rails/templates/base/base/client/app/bundles/HelloWorld/startup/globals.jsx.tt
+++ b/lib/generators/react_on_rails/templates/base/base/client/app/bundles/HelloWorld/startup/globals.jsx.tt
@@ -3,4 +3,4 @@ import ReactOnRails from 'react_on_rails';
 import <%= component_name %> from './<%= component_name %>';
 
 // This is how react_on_rails can see the HelloWorldApp in the browser.
-ReactOnRails.registerComponent('<%= component_name %>', <%= component_name %>);
+ReactOnRails.register('<%= component_name %>', <%= component_name %>);
