--- a/spec/dummy/app/views/pages/index.html.erb
+++ b/spec/dummy/app/views/pages/index.html.erb
@@ -87,4 +87,4 @@ This page demonstrates a few things the other pages do not show:
   That will generate this:
 </p>
 
-<%= server_render_js("ReactOnRails.componentForName('HelloString').world()") %>
+<%= server_render_js("ReactOnRails.getComponent('HelloString').component.world()") %>
