--- a/spec/dummy/app/views/pages/_header.erb
+++ b/spec/dummy/app/views/pages/_header.erb
@@ -32,5 +32,8 @@
   <li>
     <%= link_to "One Page with Many Examples at Once", root_path %>
   </li>
+  <li>
+    <%= link_to "React Router", react_router_path %>
+  </li>
 </ul>
 <hr/>
