--- a/spec/dummy/app/views/pages/server_side_log_throw.html.erb
+++ b/spec/dummy/app/views/pages/server_side_log_throw.html.erb
@@ -20,10 +20,10 @@
 <h2>Server render plain JS</h2>
 <p>Suppose you have some JavaScript that generates a string of HTML, but throws this error:</p>
 <pre>
-  <%%= server_render_js("(function() { var x = ReactOnRails.componentForName('HelloString').world(); console.warn('ran console.warn on the server()'); throw new Error('Error thrown on server'); return x;})()") %>
+  <%%= server_render_js("(function() { var x = ReactOnRails.getComponent('HelloString').world(); console.warn('ran console.warn on the server()'); throw new Error('Error thrown on server'); return x;})()") %>
 </pre>
 
 
 <pre>
-<%= server_render_js("(function() { var x = ReactOnRails.componentForName('HelloString').world(); console.warn('ran console.warn on the server()'); throw new Error('Error thrown on server'); return x;})()") %>
+<%= server_render_js("(function() { var x = ReactOnRails.getComponent('HelloString').world(); console.warn('ran console.warn on the server()'); throw new Error('Error thrown on server'); return x;})()") %>
 </pre>
