Converted to specify 'generatorFunction' in js
This change puts specification of a generator function on the function.
This allows to pass an options object which can be something like this:

import ReactOnRails from 'react-on-rails';

import HelloWorld from '../components/HelloWorld';
import HelloWorldWithLogAndThrow from '../components/HelloWorldWithLogAndThrow';
import HelloWorldES5 from '../components/HelloWorldES5';
import HelloWorldApp from './HelloWorldApp';

import ReduxApp from './ClientReduxApp';
import RouterApp from './ClientRouterApp';
import HelloString from '../non_react/HelloString';

ReactOnRails.register({
  HelloWorld,
  HelloWorldWithLogAndThrow,
  HelloWorldES5,
  ReduxApp,
  HelloWorldApp,
  RouterApp,
});

--- a/lib/generators/react_on_rails/templates/redux/base/client/app/bundles/HelloWorld/startup/HelloWorldAppClient.jsx.tt
+++ b/lib/generators/react_on_rails/templates/redux/base/client/app/bundles/HelloWorld/startup/HelloWorldAppClient.jsx.tt
@@ -18,4 +18,6 @@ const <%= generator_function_name %> = props => {
   return reactComponent;
 };
 
+<%= generator_function_name %>.generatorFunction = true;
+
 export default <%= generator_function_name %>;
