--- a/spec/dummy/app/views/pages/client_side_hello_world.html.erb
+++ b/spec/dummy/app/views/pages/client_side_hello_world.html.erb
@@ -1,5 +1,5 @@
 <%= render "header" %>
-<%= react_component("HelloWorld", @app_props_server_render, prerender: false, trace: true, generator_function: false) %>
+<%= react_component("HelloWorld", @app_props_server_render, prerender: false, trace: true) %>
 <hr/>
 
 <h1>React Rails Client Side Only Rendering</h1>
@@ -30,7 +30,7 @@
     Place the component on the view: spec/dummy/app/views/pages/client_side_hello_world.html.erb
     <br/>
     <pre>
-      <%%= react_component("HelloWorld", @app_props_server_render, prerender: false, trace: true, generator_function: false) %>
+      <%%= react_component("HelloWorld", @app_props_server_render, prerender: false, trace: true) %>
     </pre>
   </li>
 </ol>
