--- a/spec/dummy/app/views/pages/server_side_log_throw.html.erb
+++ b/spec/dummy/app/views/pages/server_side_log_throw.html.erb
@@ -1,6 +1,6 @@
 <%= render "header" %>
 
-<%= react_component("HelloWorldWithLogAndThrow", @app_props_server_render, prerender: true, trace: true, generator_function: false) %>
+<%= react_component("HelloWorldWithLogAndThrow", @app_props_server_render, prerender: true, trace: true) %>
 <hr/>
 
 <h1>React Rails Server Rendering</h1>
