--- a/spec/dummy/app/views/pages/server_side_redux_app_cached.html.erb
+++ b/spec/dummy/app/views/pages/server_side_redux_app_cached.html.erb
@@ -5,7 +5,7 @@
   <% puts "=" * 80 %>
   <% puts "server rendering react components" %>
   <% puts "=" * 80 %>
-  <%= react_component("ReduxApp", @app_props_server_render, prerender: true, trace: true, generator_function: true) %>
+  <%= react_component("ReduxApp", @app_props_server_render, prerender: true, trace: true) %>
 <% end %>
 <hr/>
 
@@ -62,7 +62,7 @@
     <br/>
     <pre>
     <%% cache @app_props_server_render do %>
-      <%%= react_component("ReduxApp", @app_props_server_render, prerender: true, trace: true, generator_function: true) %>
+      <%%= react_component("ReduxApp", @app_props_server_render, prerender: true, trace: true) %>
     <%% end %>
     </pre>
   </li>
