Auto detection of generator function!
Only issue is that node_package/tests depend on react
and if I install react at the top level, I can't depend on that for
spec/dummy integration tests, or else I get the double inclusion of
react issue.

--- a/spec/dummy/app/views/pages/_header.erb
+++ b/spec/dummy/app/views/pages/_header.erb
@@ -35,5 +35,8 @@
   <li>
     <%= link_to "React Router", react_router_path %>
   </li>
+  <li>
+    <%= link_to "Pure Component", pure_component_path %>
+  </li>
 </ul>
 <hr/>
