Fix issue with Jade by adding ReactOnRails.render
* Changed domId to domNodeId (thanks Rob and Alex)
* Fixed generators to use new API of "registration" from "globals"
* Fixed tests for generators

--- a/lib/generators/react_on_rails/templates/base/base/client/package.json.tt
+++ b/lib/generators/react_on_rails/templates/base/base/client/package.json.tt
@@ -1,3 +1,4 @@
+<%- require 'react_on_rails/version' -%>
 {
   "name": "react-webpack-rails-tutorial",
   "version": "1.1.0",
@@ -58,6 +59,7 @@
     "react-bootstrap": "^0.28.1",
     <%- end -%>
     "react-dom": "^0.14.3",
+    "react-on-rails:": <%= ReactOnRails::VERSION %>,
     <%- if options.redux? -%>
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
