--- a/spec/dummy/app/views/pages/server_side_redux_app_cached.html.erb
+++ b/spec/dummy/app/views/pages/server_side_redux_app_cached.html.erb
@@ -40,16 +40,17 @@
   </li>
   <li>
     Expose the Redux Component on the client side:
-    spec/dummy/client/app/startup/clientGlobals.jsx
+    spec/dummy/client/app/startup/clientRegistration.jsx
     <br/>
     <pre>
     import ReduxApp from './ClientReduxApp';
-    window.ReduxApp = ReduxApp;
+    import ReactOnRails from 'react-on-rails';
+    ReactOnRails.register({ ReduxApp });
     </pre>
   </li>
   <li>
     Expose the Redux Component on the server side:
-    spec/dummy/client/app/startup/serverGlobals.jsx
+    spec/dummy/client/app/startup/serverRegistration.jsx
     <br/>
     <pre>
     import ReduxApp from './ServerReduxApp';
