--- a/lib/generators/react_on_rails/templates/base/base/client/app/bundles/HelloWorld/startup/registration.jsx.tt
+++ b/lib/generators/react_on_rails/templates/base/base/client/app/bundles/HelloWorld/startup/registration.jsx.tt
@@ -1,6 +1,6 @@
-import ReactOnRails from 'react_on_rails';
+import ReactOnRails from 'react-on-rails';
 <%- component_name = options.server_rendering? ? "HelloWorldAppClient" : "HelloWorldApp" -%>
 import <%= component_name %> from './<%= component_name %>';
 
 // This is how react_on_rails can see the HelloWorldApp in the browser.
-ReactOnRails.register('<%= component_name %>', <%= component_name %>);
+ReactOnRails.register({ <%= component_name %> });
