--- a/lib/generators/react_on_rails/templates/base/base/client/package.json.tt
+++ b/lib/generators/react_on_rails/templates/base/base/client/package.json.tt
@@ -59,7 +59,7 @@
     "react-bootstrap": "^0.28.1",
     <%- end -%>
     "react-dom": "^0.14.3",
-    "react-on-rails:": <%= ReactOnRails::VERSION %>,
+    "react-on-rails": "<%= ReactOnRails::VERSION %>",
     <%- if options.redux? -%>
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
