Updated to babel6 for generators, lots fixes
* Basic generators works
* Redux generator not quite working

--- a/lib/generators/react_on_rails/templates/base/base/client/webpack.client.base.config.js.tt
+++ b/lib/generators/react_on_rails/templates/base/base/client/webpack.client.base.config.js.tt
@@ -14,11 +14,8 @@ module.exports = {
 
     // See use of 'vendor' in the CommonsChunkPlugin inclusion below.
     vendor: [
-      'babel-core/polyfill',
+      'babel-polyfill',
       'jquery',
-      'jquery-ujs',
-      'react',
-      'react-dom',
     ],
 
     // This will contain the app entry points defined by webpack.hot.config and webpack.rails.config
@@ -56,7 +53,8 @@ module.exports = {
   ],
   module: {
     loaders: [
-      // Not all apps require jQuery. Many Rails apps do, such as those using TurboLinks.
+
+      // Not all apps require jQuery. Many Rails apps do, such as those using TurboLinks or bootstrap js
       {test: require.resolve('jquery'), loader: 'expose?jQuery'},
       {test: require.resolve('jquery'), loader: 'expose?$'},
     ],
