Add aliases for react and react-dom to generators' webpack configs to prevent double loading issue

--- a/lib/generators/react_on_rails/templates/base/base/client/webpack.client.base.config.js.tt
+++ b/lib/generators/react_on_rails/templates/base/base/client/webpack.client.base.config.js.tt
@@ -27,6 +27,8 @@ module.exports = {
     extensions: ['', '.webpack.js', '.web.js', '.js', '.jsx', '.scss', '.css', 'config.js'],
     alias: {
       lib: path.join(process.cwd(), 'app', 'lib'),
+      react: path.resolve('./node_modules/react'),
+      'react-dom': path.resolve('./node_modules/react-dom'),
     },
   },
   plugins: [
