Misc Fixes for Generators:
* Change styling of gen app
* fix issue with ruby-lint.yml
* Fixed display of warning messages and stop app
* add option to override stopping when you get warnings

--- a/lib/generators/react_on_rails/templates/ruby_linters/ruby-lint.yml.tt
+++ b/lib/generators/react_on_rails/templates/ruby_linters/ruby-lint.yml.tt
@@ -1,9 +1,15 @@
+# Not currently using ruby-lint
+---
 presenter: syntastic
 
+# Be sure to edit this per your project!
 directories:
   - app
   - config
+  - lib
+  <%- if dest_dir_exists?("spec") -%>
   - spec
+  <%- end -%>
 
 ignore_paths:
   - client
