Implement shared stores in controller
* Deprecate usage of `redux_store` in the view.
* Updated gems and npm modules
* Support Phantom JS 2.x

--- a/spec/dummy/app/views/layouts/application.html.erb
+++ b/spec/dummy/app/views/layouts/application.html.erb
@@ -17,5 +17,9 @@
 
 <%= yield %>
 
+<!-- This is a placeholder for ReactOnRails to know where to render the store props for
+     client side hydration -->
+<%= redux_store_hydration_data %>
+
 </body>
 </html>
