Fix spec failures: incorrect Turbolinks require
Need to use require_asset

--- a/spec/dummy/app/assets/javascripts/application_non_webpack.js.erb
+++ b/spec/dummy/app/assets/javascripts/application_non_webpack.js.erb
@@ -3,5 +3,5 @@
 // b/c it exposes jQuery for turbolinks and another non-webpack JS (if any)
 
 <% if ENV["DISABLE_TURBOLINKS"].blank? %>
-//= require turbolinks
+  <% require_asset "turbolinks" %>
 <% end %>
