Removed validation of Ruby part of Turbolinks
Turbolinks 5 does not have a Ruby part.

--- a/spec/dummy/app/assets/javascripts/application_static.js.erb
+++ b/spec/dummy/app/assets/javascripts/application_static.js.erb
@@ -1,16 +1,22 @@
-// This file is used in production to server generated JS assets. In development mode, we use the Webpack Dev Server
-// to provide assets. This allows for hot reloading of the JS and CSS.
-// See app/helpers/application_helper.rb for how the correct assets file is picked based on the Rails environment.
-// Those helpers are used here: app/views/layouts/application.html.erb
+// This file is used in production to server generated JS assets.
+//
+// In development mode, we use either:
+// Procfile.static: Load static assets
+// Procfile.hot: Use the Webpack Dev Server to provide assets. This allows for hot reloading of
+// the JS and CSS via HMR.
+//
+// To understand which one is used, see app/views/layouts/application.html.erb
 
 // These assets are located in app/assets/webpack directory
-// CRITICAL that webpack/vendor-bundle must be BEFORE turbolinks
+// Its is CRITICAL for Turbolinks 2.x that webpack/vendor-bundle must be BEFORE turbolinks
 // since it is exposing jQuery and jQuery-ujs
 
-<% if ENV["REACT_ON_RAILS_ENV"] != "HOT" %>
-  <% require_asset "vendor-bundle" %>
-  <% require_asset "app-bundle" %>
-<% end %>
+// NOTE: See config/initializers/assets.rb for some critical configuration regarding sprockets.
+// Basically, in HOT mode, we do not include this file for
+// Rails.application.config.assets.precompile
 
-// Non-webpack assets incl turbolinks
+//= require vendor-bundle
+//= require app-bundle
+
+// Non-webpack assets include turbolinks and these are loaded in the "hot" mode as well.
 //= require application_non_webpack
