removed bootstrap from repo

--- a/lib/generators/react_on_rails/templates/base/base/client/webpack.client.hot.config.js.tt
+++ b/lib/generators/react_on_rails/templates/base/base/client/webpack.client.hot.config.js.tt
@@ -11,12 +11,7 @@ config.entry.app.push(
 
   // Webpack dev server
   'webpack-dev-server/client?http://localhost:4000',
-  'webpack/hot/dev-server'<%- unless options.skip_bootstrap? -%>,
-
-  // See: https://github.com/shakacode/bootstrap-sass-loader
-  // We're using the bootstrap-sass loader.
-  'bootstrap-sass!./bootstrap-sass.config.js'
-  <%- end -%>
+  'webpack/hot/dev-server'
 
 );
 
