--- a/lib/generators/react_on_rails/templates/base/base/client/package.json.tt
+++ b/lib/generators/react_on_rails/templates/base/base/client/package.json.tt
@@ -21,6 +21,7 @@
     <%- end -%>
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "cacheDirectories": ["node_modules", "client/node_modules"],
   "dependencies": {
     "autoprefixer": "^6.3.5",
     "axios": "^0.9.1",
