Numerous fixes, some with deprecations
* Change generators to use app/assets/webpack as the generation
  directory might contain CSS.
* Numerous improvements in the verification that the webpack created
  assets are up to date before running tests.
* Several new configuration options and changes to the configuration:
  # Directory where your generated assets go
  config.generated_assets_dir = File.join(%w(app assets webpack))

  # Define the files for we need to check for webpack compilation when running tests
  config.webpack_generated_files = %w( app-bundle.js vendor-bundle.js server-bundle.js )

* config.server_bundle_js_file no longer uses a path, as it can only
  exist in the generated_assets_dir.
* redux_store view helper now requires the props to be specified as a
  named parameter, an it takes an option `defer` to allow rendering at
  the bottom of the layout.

--- a/spec/dummy/app/views/pages/client_side_hello_world_shared_store_defer.html.erb
+++ b/spec/dummy/app/views/pages/client_side_hello_world_shared_store_defer.html.erb
@@ -1,5 +1,7 @@
 <%= render "header" %>
-<%= redux_store("SharedReduxStore", props: @app_props_server_render) %>
+<!-- defer will make this not render the HTML at the top but at the bottom, per application.html.erb -->
+YO
+<% redux_store("SharedReduxStore", props: @app_props_server_render, defer: true) %>
 
 <%= react_component("ReduxSharedStoreApp", prerender: false, trace: true) %>
 <hr/>
