--- a/spec/dummy/app/views/pages/_header.erb
+++ b/spec/dummy/app/views/pages/_header.erb
@@ -11,12 +11,20 @@
                 client_side_hello_world_shared_store_controller_path %>
   </li>
   <li>
+    <%= link_to "Hello World Shared Redux Components Client Rendered Defer",
+                client_side_hello_world_shared_store_defer_path %>
+  </li>
+  <li>
     <%= link_to "Hello World Shared Redux Components Server Rendered",
                 server_side_hello_world_shared_store_path %>
   </li>
   <li>
     <%= link_to "Hello World Shared Redux Components Server Rendered Controller",
                 server_side_hello_world_shared_store_controller_path %>
+  </li>
+  <li>
+    <%= link_to "Hello World Shared Redux Components Server Rendered Defer",
+                server_side_hello_world_shared_store_defer_path %>
   </li>
   <li>
     <%= link_to "Hello World Component Server Rendered", server_side_hello_world_path %>
