--- a/lib/generators/react_on_rails/templates/base/base/client/package.json.tt
+++ b/lib/generators/react_on_rails/templates/base/base/client/package.json.tt
@@ -40,6 +40,7 @@
     "autoprefixer": "^6.3.2",
     "axios": "^0.9.1",
     "babel": "^6.5.1",
+    "babel-runtime": "^6.5.1",
     "babel-cli": "^6.5.1",
     "babel-core": "^6.5.1",
     "babel-loader": "^6.2.2",
