--- a/spec/dummy/app/views/dummy_mailer/hello_email.html.erb
+++ b/spec/dummy/app/views/dummy_mailer/hello_email.html.erb
@@ -1,3 +1,7 @@
 Someone emailed this to you:
 
-<%= react_component("HelloWorld", props: {}, prerender: true) %>
+<%= react_component("HelloWorld", props: {
+    helloWorldData: {
+        name: "Mr. Mailing Server Side Rendering"
+    }
+}, prerender: true) %>
