--- a/lib/generators/react_on_rails/templates/base/base/package.json.tt
+++ b/lib/generators/react_on_rails/templates/base/base/package.json.tt
@@ -4,10 +4,10 @@
   "private": true,
   "engines": {
     "node": "5.10.0",
-    "npm": "3.5.0"
+    "yarn": "3.5.0"
   },
   "scripts": {
-    "postinstall": "cd client && npm install",
+    "postinstall": "cd client && yarn",
     "rails-server": "echo 'visit http://localhost:3000/hello_world' && foreman start -f Procfile.dev",
     "test": "rspec"
   }
