update basic generator

--- a/lib/generators/react_on_rails/templates/base/base/client/app/bundles/HelloWorld/components/HelloWorld.jsx.tt
+++ b/lib/generators/react_on_rails/templates/base/base/client/app/bundles/HelloWorld/components/HelloWorld.jsx.tt
@@ -1,29 +1,45 @@
 import React, { PropTypes } from 'react';
 
-// Simple example of a React "dumb" component
-const HelloWorld = ({ name, updateName }) => (
-  <div className="container">
-    <h3>
-      Hello, {name}!
-    </h3>
-    <hr />
-    <form className="form-horizontal">
-      <label htmlFor="name">
-        Say hello to:
-      </label>
-      <input
-        type="text" value={name} id="name"
-        onChange={(e) => updateName(e.target.value)}
-      />
-    </form>
-  </div>
-);
+export default class HelloWorld extends React.Component {
+  static propTypes = {
+    name: PropTypes.string.isRequired, // this is passed from the Rails view
+  };
 
-HelloWorld.propTypes = {
-  // If you have lots of data or action properties, you should consider grouping them by
-  // passing two properties: "data" and "actions".
-  updateName: PropTypes.func.isRequired,
-  name: PropTypes.string.isRequired,
-};
+  /**
+   * @param props - Comes from your rails view.
+   * @param _railsContext - Comes from React on Rails
+   */
+  constructor(props, _railsContext) {
+    super(props);
 
-export default HelloWorld;
+    // How to set initial state in ES6 class syntax
+    // https://facebook.github.io/react/docs/reusable-components.html#es6-classes
+    this.state = { name: this.props.name };
+  }
+
+  updateName = (name) => {
+    this.setState({ name });
+  };
+
+  render() {
+    return (
+      <div>
+        <h3>
+          Hello, {this.state.name}!
+        </h3>
+        <hr />
+        <form >
+          <label htmlFor="name">
+            Say hello to:
+          </label>
+          <input
+            id="name"
+            type="text"
+            value={this.state.name}
+            onChange={(e) => this.updateName(e.target.value)}
+          />
+        </form>
+      </div>
+    );
+  }
+}
