--- a/lib/generators/react_on_rails/templates/base/base/client/app/bundles/HelloWorld/components/HelloWorldApp.jsx.tt
+++ b/lib/generators/react_on_rails/templates/base/base/client/app/bundles/HelloWorld/components/HelloWorldApp.jsx.tt
@@ -1,6 +1,6 @@
 import React, { PropTypes } from 'react';
 
-export default class HelloWorld extends React.Component {
+export default class HelloWorldApp extends React.Component {
   static propTypes = {
     name: PropTypes.string.isRequired, // this is passed from the Rails view
   };
