--- a/lib/generators/react_on_rails/templates/base/base/client/app/bundles/HelloWorld/startup/registration.jsx.tt
+++ b/lib/generators/react_on_rails/templates/base/base/client/app/bundles/HelloWorld/startup/registration.jsx.tt
@@ -1,6 +1,6 @@
 import ReactOnRails from 'react-on-rails';
 
-import HelloWorldApp from '../components/HelloWorldApp';
+import HelloWorldApp from '<%= config[:app_relative_path] %>';
 
 // This is how react_on_rails can see the HelloWorld in the browser.
 ReactOnRails.register({
