Yarn migration, pt. IV: tests

--- a/lib/generators/react_on_rails/templates/base/base/package.json.tt
+++ b/lib/generators/react_on_rails/templates/base/base/package.json.tt
@@ -4,11 +4,10 @@
   "private": true,
   "engines": {
     "node": "6.9.0",
-    "npm": "4.1.1",
-    "yarn": "3.5.0"
+    "npm": "4.1.1"
   },
   "scripts": {
-    "postinstall": "cd client && yarn",
+    "postinstall": "cd client && yarn install",
     "rails-server": "echo 'visit http://localhost:3000/hello_world' && foreman start -f Procfile.dev",
     "test": "rspec"
   }
