--- a/spec/dummy/app/views/pages/server_side_hello_world_with_options.html.erb
+++ b/spec/dummy/app/views/pages/server_side_hello_world_with_options.html.erb
@@ -1,7 +1,7 @@
 <%= render "header" %>
 
 <%= react_component("HelloWorld",
-                    props: @app_props_server_render,
+                    props: @app_props_server_render.to_json,
                     prerender: true,
                     trace: true,
                     id: "my-hello-world-id",
@@ -27,7 +27,7 @@
 </ul>
 <pre>
 <%%= react_component("HelloWorld",
-                    props: @app_props_server_render,
+                    props: @app_props_server_render.to_json,
                     prerender: true,
                     trace: true,
                     id: "my-hello-world-id",
