Implement test for page title rendered in generator function on server
* Add conditional title to dummy app layout
* Implement rendering title string in generator function on server
* Add test for conditional title to integration_spec
* Refactor code in react_on_rails helper

--- a/spec/dummy/app/views/layouts/application.html.erb
+++ b/spec/dummy/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Dummy</title>
+  <title><%= content_for?(:title) ? yield(:title) : "Dummy" %></title>
 
   <%= yield :head %>
 
