--- a/spec/dummy/app/views/layouts/application.html.erb
+++ b/spec/dummy/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= content_for?(:title) ? yield(:title) : "Dummy" %></title>
+  <%= content_for?(:title) ? yield(:title) : "Dummy" %>
 
   <%= yield :head %>
 
