Final fixes for v7.1.0
* Removed unnecessary rake task for running specs
* Fixed inconsistency with using "-bundle" only some of the time.
* Removed unused node_modules value in paths.yml
* Upgraded to webpacker_lite 1.0.0

--- a/spec/dummy/app/views/layouts/application.html.erb
+++ b/spec/dummy/app/views/layouts/application.html.erb
@@ -9,12 +9,12 @@
 
   <%= yield :head %>
 
-  <%= stylesheet_pack_tag(static: 'app',
+  <%= stylesheet_pack_tag(static: 'app-bundle',
                           media: 'all',
                           'data-turbolinks-track': true) %>
 
-  <%= javascript_pack_tag('vendor', 'data-turbolinks-track': true) %>)
-  <%= javascript_pack_tag('app', 'data-turbolinks-track': true) %>)
+  <%= javascript_pack_tag('vendor-bundle', 'data-turbolinks-track': true) %>
+  <%= javascript_pack_tag('app-bundle', 'data-turbolinks-track': true) %>
 
   <%= csrf_meta_tags %>
 </head>
