Add some css to dummy app examples

--- a/react_on_rails_pro/spec/dummy/app/assets/stylesheets/application_static.css.scss
+++ b/react_on_rails_pro/spec/dummy/app/assets/stylesheets/application_static.css.scss
@@ -6,7 +6,7 @@
 
 // If we were importing bootstrap, we'd have this generated.
 // @import 'vendor-bundle'
-// @import 'app-bundle';
+@import 'app-bundle';
 
 // Non-webpack assets
 @import 'application_non_webpack';
