--- a/spec/dummy/app/views/pages/index.html.erb
+++ b/spec/dummy/app/views/pages/index.html.erb
@@ -1,2 +1,1 @@
-<%= redux_store("SharedReduxStore", props: @app_props_server_render) %>
-<%= react_component("ReduxSharedStoreApp", prerender: true, trace: true, id: "ReduxSharedStoreApp-react-component-0") %>
+<%= link_to("Shared Redux Store", shared_redux_store_path) %>
