--- a/spec/dummy/app/views/pages/index.html.erb
+++ b/spec/dummy/app/views/pages/index.html.erb
@@ -1,1 +1,3 @@
 <%= link_to("Shared Redux Store", shared_redux_store_path) %>
+<br/>
+<%= link_to("Component with Lodash", component_with_lodash_path) %>
