--- a/lib/generators/react_on_rails/templates/base/base/client/webpack.config.js.tt
+++ b/lib/generators/react_on_rails/templates/base/base/client/webpack.config.js.tt
@@ -21,7 +21,7 @@ const config = {
       'es5-shim/es5-shim',
       'es5-shim/es5-sham',
       'babel-polyfill',
-      './app/bundles/HelloWorld/startup/registration',
+      './app/bundles/<%= example_page_name %>/startup/registration',
     ],
   },
 
