--- a/lib/generators/react_on_rails/templates/redux/base/client/app/bundles/HelloWorld/startup/HelloWorldApp.jsx.tt
+++ b/lib/generators/react_on_rails/templates/redux/base/client/app/bundles/HelloWorld/startup/HelloWorldApp.jsx.tt
@@ -1,16 +1,16 @@
 import React from 'react';
 import { Provider } from 'react-redux';
 
-import configureStore from '../store/helloWorldStore';
-import HelloWorldContainer from '../containers/HelloWorldContainer';
+import configureStore from '../store/<%= example_page_lower_camelcase %>Store';
+import <%= example_page_name %>Container from '../containers/<%= example_page_name %>Container';
 
 // See documentation for https://github.com/reactjs/react-redux.
 // This is how you get props from the Rails view into the redux store.
 // This code here binds your smart component to the redux store.
-const HelloWorldApp = (props) => (
+const <%= example_page_name %>App = (props) => (
   <Provider store={configureStore(props)}>
-    <HelloWorldContainer />
+    <<%= example_page_name %>Container />
   </Provider>
 );
 
-export default HelloWorldApp;
+export default <%= example_page_name %>App;
