--- a/lib/generators/react_on_rails/templates/base/base/client/app/bundles/HelloWorld/startup/registration.jsx.tt
+++ b/lib/generators/react_on_rails/templates/base/base/client/app/bundles/HelloWorld/startup/registration.jsx.tt
@@ -2,7 +2,7 @@ import ReactOnRails from 'react-on-rails';
 
 import <%= config[:component_name] %> from '<%= config[:app_relative_path] %>';
 
-// This is how react_on_rails can see the HelloWorld in the browser.
+// This is how react_on_rails can see the <%= example_page_name %> in the browser.
 ReactOnRails.register({
   <%= config[:component_name] %>,
 });
