--- a/lib/generators/react_on_rails/templates/dev_tests/spec/features/hello_world_spec.rb.tt
+++ b/lib/generators/react_on_rails/templates/dev_tests/spec/features/hello_world_spec.rb.tt
@@ -2,10 +2,10 @@
 
 require_relative "../rails_helper"
 
-feature "Hello World", js: true do
-  scenario "the hello world example works" do
-    visit "/hello_world"
-    expect(heading).to have_text("Hello World")
+feature "<%= example_page_title %>", js: true do
+  scenario "the example page works" do
+    visit "/<%= example_page_path %>"
+    expect(heading).to have_text("<%= example_page_title %>")
     expect(message).to have_text("Stranger")
     name_input.set("John Doe")
     expect(message).to have_text("John Doe")
