Fix typo in webpackConfigLoader.js

--- a/lib/generators/react_on_rails/templates/base/base/Procfile.dev.tt
+++ b/lib/generators/react_on_rails/templates/base/base/Procfile.dev.tt
@@ -1,2 +1,10 @@
+# To ensure that Rails uses static assets rather than the webpack-dev-server
+# you may set ENV value WEBPACKER_DEV_SERVER=FALSE or delete or comment out the dev_server section
+# of config/webpacker.yml
+# For example:
+# web: WEBPACKER_DEV_SERVER=FALSE rails s -p 3000
+
 web: rails s -p 3000
+
+# Next line runs a watch process with webpack
 client: sh -c 'rm -rf public/webpack/development/* || true && cd client && bundle exec rake react_on_rails:locale && yarn run build:development'
