Change webpack-bundle to hello-world-bundle
For the generator

--- a/lib/generators/react_on_rails/templates/base/base/app/views/layouts/hello_world.html.erb.tt
+++ b/lib/generators/react_on_rails/templates/base/base/app/views/layouts/hello_world.html.erb.tt
@@ -3,10 +3,7 @@
   <head>
     <title>ReactOnRailsWithWebpacker</title>
     <%%= csrf_meta_tags %>
-
-    <%%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%%= javascript_pack_tag 'webpack-bundle' %>
+    <%%= javascript_pack_tag 'hello-world-bundle' %>
   </head>
 
   <body>
