Updates to React on Rails 9 for Webpacker v3
See https://github.com/shakacode/react-on-rails-v9-rc-generator/pulls
for examples of generator output

--- a/lib/generators/react_on_rails/templates/base/base/app/views/layouts/hello_world.html.erb
+++ b/lib/generators/react_on_rails/templates/base/base/app/views/layouts/hello_world.html.erb
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>ReactOnRailsWithWebpacker</title>
-    <%%= csrf_meta_tags %>
-    <%%= javascript_pack_tag 'hello-world-bundle' %>
+    <%= csrf_meta_tags %>
+    <%= javascript_pack_tag 'hello-world-bundle' %>
   </head>
 
   <body>
-    <%%= yield %>
+    <%= yield %>
   </body>
 </html>
