clean up trace options

--- a/spec/dummy/app/views/pages/_header.erb
+++ b/spec/dummy/app/views/pages/_header.erb
@@ -83,5 +83,8 @@
   <li>
     <%= link_to "Image Example", image_example_path %>
   </li>
+  <li>
+    <%= link_to "Server Render With Timout", server_render_with_timeout_path %>
+  </li>
 </ul>
 <hr/>
