--- a/spec/dummy/app/views/pages/client_side_manual_render.html.erb
+++ b/spec/dummy/app/views/pages/client_side_manual_render.html.erb
@@ -18,7 +18,7 @@
     <pre>
   import ManualRenderApp from './ManualRenderAppRenderer';
 
-  ReactOnRails.registerRenderer({
+  ReactOnRails.register({
     ManualRenderApp,
   });
     </pre>
