--- a/spec/dummy/app/views/pages/deferred_render_with_server_rendering.html.erb
+++ b/spec/dummy/app/views/pages/deferred_render_with_server_rendering.html.erb
@@ -11,7 +11,7 @@
     <pre>
   import DeferredRenderApp from './DeferredRenderAppRenderer';
 
-  ReactOnRails.registerRenderer({
+  ReactOnRails.register({
     DeferredRenderApp,
   });
     </pre>
