--- a/spec/dummy/app/views/shared/_header.erb
+++ b/spec/dummy/app/views/shared/_header.erb
@@ -1,5 +1,8 @@
 <ul>
   <li>
+    <%= link_to "cached_react_component example", server_side_redux_app_cached_path %>
+  </li>
+  <li>
     <%= link_to("Shared Redux Store", shared_redux_store_path) %>
   </li>
   <li>
@@ -43,9 +46,6 @@
   </li>
   <li>
     <%= link_to "Redux App Server Rendered (Generator Function)", server_side_redux_app_path %>
-  </li>
-  <li>
-    <%= link_to "Redux App Server Rendered (Generator Function) With Fragment Caching", server_side_redux_app_cached_path %>
   </li>
   <li>
     <%= link_to "Client Logging and Throw Error Handling", client_side_log_throw_path %>
